[package]
name = "gportal_rs"
description = "A rust library for interacting with the gportal api"
version = "0.1.0"
authors = ["cainthebest"]
edition = "2021"
license = "GPL-3.0-or-later"


[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
hyper = "~0.11"
serde_yaml = "0.7"
base64 = "~0.7.0"
futures = "0.1.23"

[dev-dependencies]
tokio-core = "*"
