[package]
name = "gportal_rs"
description = "A rust library for interacting with the gportal api"
version = "0.1.0"
authors = ["cainthebest"]
edition = "2021"
license = "GPL-3.0-or-later"


[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "2.3"
hyper = {version = "0.14.24", features = ["client", "http1"] }
serde_yaml = "0.9"
base64 = "~0.9.3"
futures = "0.1.23"

