[package]
name = "gportal_rs"
description = "A rust library for interacting with the gportal gRPC"
version = "0.2.0"
authors = ["cainthebest"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"


